--- a/wp-content/themes/custom-theme/style.css
+++ b/wp-content/themes/custom-theme/style.css
@@ -19,16 +19,26 @@
 a{
     text-decoration: none;
 }
+.strong{
+    font-weight: 600;
+}
+.img{
+    width: 100%;
+    max-width: auto;
+}
+.uppercase{
+    text-transform: uppercase;
+}
 
 /* General Style Body */
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
 }
 .container{
-    max-width: 1200px;
+    width: 1200px;
     margin: 0 auto;
 }
 
@@ -103,56 +113,52 @@ nav.menu {
 }
 
 /* Footer */
-footer {
+.footer-widget-area{
     background-color: #F0F0F0;
-    color: #fff;
-    text-align: center;
-    padding: 1em;
-    position: relative;
-    bottom: 0;
-    width: 100%;
 }
-.footer-widgets {
+.footer-widgets-container {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    gap: 20px;
+    width: 1200px;
+    margin: 0 auto;
+    padding: 80px 0px 30px;
 }
 .footer-widget {
     flex: 1;
-    margin: 0 15px;
+    text-align: left;
+    padding: 10px;
 }
-.footer-widget h3 {
+.footer-widget ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+}
+.footer-widget-title {
     font-size: 18px;
+    font-weight: bold;
     margin-bottom: 10px;
 }
-
-
-/* Form Styles */
-form {
-    max-width: 600px;
-    margin: 0 auto;
+.wp-block-group > div{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    justify-content: space-between;
 }
-
-form input,
-form textarea {
-    width: 100%;
-    padding: 0.75em;
-    margin-bottom: 1em;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.wp-block-group h2{
+    font-size: 18px;
+    font-weight: 700;
 }
-
-form button {
-    padding: 0.75em 1.5em;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+.footer-widget ul li{
+    font-size: 16px;
+    color: #000000;;
 }
-
-form button:hover {
-    background-color: #555;
+.footer-widget-area .copyright{
+    text-align: center;
+    padding-bottom: 40px;
+    font-size: 16px;
+    color: #000000; 
 }
 
 /* Jumbotron Section */
@@ -206,36 +212,293 @@ form button:hover {
 .button-cta a:hover{
     background-color: #D21411;
 }
-
+section{
+    padding: 120px 0px;
+}
 /* Content Boxes */
 .content-boxes {
-    max-width: 1200px;
-    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    padding: 60px 0;
+}
+.box {
+    border: 1px solid #ddd;
+    border-radius: 0px;
+    padding: 40px 30px;
+    background-color: #fff;
+    transition: transform 0.2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    row-gap: 20px;
+}
+.box:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.box .icon {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+.box h2 {
+    font-size: 18px;
+    font-weight: bold;
+}
+.text-description .box p {
+    color: #555;
+    font-size: 14px;
+    text-align: left;
+    width: 100%;
+}
+
+.text-description{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    row-gap: 50px;
+}
+.title h1{
+    position: relative;
+    display: inline-block;
+    font-size: 48px;
+    margin-bottom: 3rem;
+}
+.title h1::after{
+    content: '';
+    position: absolute;
+    top: 130%;
+    left: 50%;
+    background-color: #D21411;
+    width: 106px;
+    height: 3px;
+    transform: translate(-50%, -50%);
+}
+.text-description p{
+    font-size: 18px;
+    width: 50%;
+    margin: 0 auto;
+}
+.bg-grey{
+    background-color: #F0F0F0;
+}
+.about{
+    display: flex;
+    align-items: center;
+}
+.about .field{
+    flex: 1 0 0;
+}
+.about .field.one .title h1{
+    line-height: 52px;
+    text-transform: uppercase;
+}
+.about .field.one .title h1::after{
+    transform: unset;
+    left: 0;
+}
+.about .field.one p{
+    padding-top: 20px;
+    font-size: 18px;
+    color: #000000;
+}
+.about .field.one{
+    padding-right: 30px;
+}
+
+.review{
     text-align: center;
 }
-
-.content-boxes .box {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.review-box{
+    margin-bottom: 40px;
 }
 
-.content-boxes .box h2 {
-    font-size: 1.5rem;
+.testimonial-slider {
+    position: relative;
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
-.content-boxes .box p {
-    font-size: 1rem;
+.slider-wrapper {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    flex: 0 0 33.333%;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.card {
+    background: #fff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 40px 25px;
+    text-align: center;
+    margin: 0 10px;
+}
+
+.stars span{
+    background: url('../custom-theme/assets/images/star.svg');
+    background-repeat: no-repeat;
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+}
+
+.card p {
+    font-size: 18px;
+    color: #000000;
+    margin-bottom: 15px;
+    line-height: 1.6;
+    font-weight: 400;
+    margin-top: 10px;
+}
+
+.author {
+    font-style: italic;
+    color: #000000;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+button.prev,
+button.next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+button.prev {
+    left: -1px;
+}
+
+button.next {
+    right: -1px;
+}
+
+section.contact{
+    padding: 50px 0px 100px;
+}
+form.contact-form{
+    width: 80%;
+    margin: 0 auto;
+}
+.contact-form-wrapper {
+    padding: 40px 0px;
+    text-align: left;
+}
+
+.contact-form-wrapper h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #000000;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.form-group {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.form-group input,
+.form-group select {
+    flex: 1;
+    padding: 10px 16px;
+    font-size: 14px;
+    border: none;
+    border-radius: 0px;
+    box-sizing: border-box;
+    height: 47px;
+}
+.form-group input:focus,
+.form-group select:focus,
+textarea:focus{
+    outline: none;
+}
+
+textarea {
+    width: 100%;
+    height: 120px;
+    padding: 10px 16px;
+    font-size: 14px;
+    border: none;
+    border-radius: 0px;
+    box-sizing: border-box;
+    resize: none;
+}
+
+.file-upload {
+    text-align: center;
+    border: 2px dashed #ccc;
+    padding: 50px 0px;
+    border-radius: 0px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.file-upload label {
+    display: block;
     color: #666;
+    font-size: 14px;
+    cursor: pointer;
 }
+
+.file-upload input {
+    display: none;
+}
+
+.disclaimer {
+    font-size: 12px;
+    color: #666;
+    margin: 10px 0;
+}
+
+.disclaimer a {
+    color: #D21411;
+    text-decoration: none;
+}
+.required{
+    color: #D21411;
+}
+form .button-cta{
+    background-color: transparent;
+    border: 1px solid #D21411;
+    padding: 15px 25px;
+    display: inline-block;
+    color: #000000;
+    width: 20%;
+    font-weight: 700;
+}
+form .button-cta:hover{
+    background-color: #D21411;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+
 
 /* Responsive Layout */
 @media (max-width: 768px) {
+    .container{
+        width: 100%;
+        margin: 0 auto;
+        padding: 0px 20px;
+    }
     header nav ul {
         flex-direction: column;
         align-items: center;
@@ -259,6 +522,16 @@ form button:hover {
     }
     nav.menu.menu-open {
         display: flex;
+    }
+    .content-boxes {
+        grid-template-columns: repeat(2, 1fr); 
+    }
+}
+@media (max-width: 480px) {
+    .container{
+        width: 100%;
+        margin: 0 auto;
+        padding: 0px 20px;
     }
     .content-boxes {
         grid-template-columns: 1fr; 
